<resources>
    <string name="app_name">FoodRunner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_in">Sign in</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="hint_password">Password</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_to_start">Sign up to start</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
</resources>