<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/loginHeading"
        style="?attr/textAppearanceHeadline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginMsg"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/please_sign_in_to_continue"
        app:layout_constraintStart_toStartOf="@+id/loginHeading"
        app:layout_constraintTop_toBottomOf="@+id/loginHeading" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlMobileNumber"
        style="@style/Widget.AppTheme.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_mobile_number"
        app:layout_constraintBottom_toTopOf="@+id/tlPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginMsg"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPassword"
        style="@style/Widget.AppTheme.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlMobileNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/tlPassword"
        app:layout_constraintTop_toBottomOf="@+id/tlPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="?attr/materialButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/tlPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tlPassword"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <TextView
        android:id="@+id/createAccountMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvMoveToSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/tlPassword" />

    <TextView
        android:id="@+id/tvMoveToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/createAccountMsg"
        app:layout_constraintEnd_toEndOf="@+id/tlPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/createAccountMsg" />
</androidx.constraintlayout.widget.ConstraintLayout>